--- a/.travis.yml
+++ b/.travis.yml
@@ -5,28 +5,19 @@ python:
     - 2.7
     - 3.3
     - 3.4
+    - 3.5
+    - 3.6
 
-before_install:
-
-    # Install conda
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-    - chmod +x miniconda.sh
-    - ./miniconda.sh -b
-    - export PATH=/home/travis/miniconda/bin:$PATH
-    - conda update --yes conda
-
-    # Make sure that interactive matplotlib backends work
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
-
-    # Make sure matplotlib uses PyQT not PySide
-    - export QT_API=pyqt
+env:
+  global:
+    - SETUP_XVFB=True
+    - QT_API=pyqt
+    - CONDA_DEPENDENCIES='matplotlib coverage pytest-cov'
+    - PIP_DEPENDENCIES='coveralls'
 
 install:
-    - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
-    - source activate test
-    - conda install --yes numpy matplotlib pytest pip
-    - pip install coverage coveralls pytest-cov
+  - git clone git://github.com/astropy/ci-helpers.git
+  - source ci-helpers/travis/setup_conda.sh
 
 script:
     - py.test --cov modest_image
