Travis: install pytest-cov and coverage with pip not conda to make sure things work with more Python versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ env:
   global:
     - SETUP_XVFB=True
     - QT_API=pyqt
-    - CONDA_DEPENDENCIES='matplotlib coverage pytest-cov'
-    - PIP_DEPENDENCIES='coveralls'
+    - CONDA_DEPENDENCIES='matplotlib'
+    - PIP_DEPENDENCIES='coveralls coverage pytest-cov'
 
 install:
   - git clone git://github.com/astropy/ci-helpers.git
